# milk

./: .gitignore  CMakeLists.txt  README.md  arap.cpp  arap_l.cpp  bbw.cpp  bbw_anim.cpp  bbw_static.cpp  boolean.cpp  eigen_geom.cpp  eigen_obb.cpp  fast_skin.cpp  gui.cpp  laplace_by_gradient.cpp  laplace_equality_constraint.cpp  log.txt  mini_eigen.cpp  monster_mash.cpp  obb.cpp  pick.cpp  quadratic_programming_inequality_constraint.cpp  remove_self_intersect.cpp  render.cpp  run_bbw.cpp  run_bbw.py  run_bbw.sh  run_bbw_static.sh  run_rself.sh  show_tet.cpp  template.cpp  test.cpp  tet.cpp  view_obb.cpp  winding_number.cpp
cmake/: FindLIBIGL.cmake
libigl/: CMakeLists.txt
libigl/cmake/: libigl.cmake
libigl/include/igl/: active_set.cpp  arap_rhs.cpp  columnize.cpp  cotmatrix.cpp  cotmatrix_entries.cpp  covariance_scatter_matrix.cpp  min_quad_with_fixed.cpp
libigl/include/igl/opengl/: gl.h
src/: camera.h  load_obj.h  mask_put.h  matrix_to_list.h  primitives.cpp  primitives.h  rasterizer.cpp  rasterizer.h  transform.h  unique_rows.h
